--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
 server.port=8080
 
-# CONECCION CON LA BASE DE DATOS
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5434/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-
-# CONFIGURACION DE JPA
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=fobregon
+spring.data.mongodb.password=fobregonpwd
+spring.data.mongodb.database=exercise_gizlo
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=${DB_HOST:localhost}
